# athena-federation-python-sdk

./: .coverage  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: mega-linter.yml  python-package.yml
athena_federation/: __init__.py  athena_data_source.py  batch_writer.py  lambda_handler.py  main.py  models.py  sdk.py  utils.py
athena_federation/example/: handler.py
athena_federation_python_sdk/: athena_data_source.py  lambda_handler.py
athena_federation_python_sdk/athena/federation/: __init__.py  batch_writer.py  models.py  sdk.py
example/: handler.py  sample_data_source.py
tests/: handler.py  sample_data_source.py  test_handler.py  test_import.py  test_main.py
