[tool.poetry]
name = "athena-federation"
version = "0.1.0"
description = "Unofficial Python SDK for Athena Federation"
authors = ["Damon P. Cortesi <DamonPCortesi@gmail.com>", "Ernest Prabhakar <ernest@quiltdata.io>"]
license = "APACHE"
readme = "README.md"
homepage = "https://github.com/quiltdata/athena-federation-python-sdk"
repository = "https://github.com/quiltdata/athena-federation-python-sdk"
documentation = "https://github.com/quiltdata/athena-federation-python-sdk"

[tool.poetry.dependencies]
python = "~3.12"
pyarrow = "17.0.0"
smart-open = "7.0.4"
importlib-metadata = "<5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.11"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
    # change in Python 3.12 beta causes warning from inside pytest
    "ignore:ast:DeprecationWarning",
    "ignore:attribute:DeprecationWarning",

]
